--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
  <div class="container"> 
   <div class="info">
-<img src="imgs1/IMG_0051.jpg"  alt="мое фото" class="avatar"/>
+<img src="./IMG_0051.jpg"  alt="мое фото" class="avatar"/>
 
 
      <div class="info-text"> 
